--- a/Resources/config/doctrine/model/File.orm.yml
+++ b/Resources/config/doctrine/model/File.orm.yml
@@ -1,4 +1,4 @@
-Arthem\Bundle\FileUploadBundle\Model\File:
+Arthem\Bundle\FileBundle\Model\File:
     type: mappedSuperclass
     gedmo:
         uploadable:
