--- a/Resources/config/fixture.yml
+++ b/Resources/config/fixture.yml
@@ -2,7 +2,7 @@
 services:
     arthem_fixtures.extension.uploadedfile:
         public: false
-        class: Arthem\Bundle\FileUploadBundle\Fixture\FileExtension
+        class: Arthem\Bundle\FileBundle\Fixture\FileExtension
         arguments:
             - %kernel.root_dir%/../web
         tags:
