--- a/Resources/config/routing/image_crop.yml
+++ b/Resources/config/routing/image_crop.yml
@@ -1,4 +1,4 @@
 
 arthem_file_upload_image_crop:
     path:     /files/images/crop
-    defaults: { _controller: ArthemFileUploadBundle:File:imageCrop }
+    defaults: { _controller: ArthemFileBundle:File:imageCrop }
