--- a/Resources/config/image_crop.yml
+++ b/Resources/config/image_crop.yml
@@ -1,12 +1,12 @@
 
 services:
-    arthem_fileupload.image_crop_manager:
-        class: Arthem\Bundle\FileUploadBundle\Doctrine\ImageCropManager
+    arthem_file.image_crop_manager:
+        class: Arthem\Bundle\FileBundle\Doctrine\ImageCropManager
         arguments:
             - @doctrine.orm.entity_manager
-            - %arthem_fileupload.model.file.class%
-            - %arthem_fileupload.model.image_crop.class%
+            - %arthem_file.model.file.class%
+            - %arthem_file.model.image_crop.class%
             - @liip_imagine.cache.manager
             - @liip_imagine.data.manager
             - @liip_imagine.filter.manager
-            - %arthem_fileupload.crop.linked_filters%
+            - %arthem_file.crop.linked_filters%
