--- a/Resources/config/image.yml
+++ b/Resources/config/image.yml
@@ -1,20 +1,16 @@
 
-parameters:
-    arthem_file.image_manager.class: Arthem\Bundle\FileBundle\ImageManager
-    arthem_file.twig.extension.image.class: Arthem\Bundle\FileBundle\Twig\Extension\ImageExtension
-
 services:
     arthem_file.image_manager:
-        class: %arthem_file.image_manager.class%
+        class: Arthem\Bundle\FileBundle\ImageManager
         arguments:
-            - @liip_imagine.cache.manager
-            - %arthem_file.image.placeholders%
+            - "@liip_imagine.cache.manager"
+            - "%arthem_file.image.placeholders%"
             - false
 
     arthem_file.twig.extension.image:
         public: false
-        class: %arthem_file.twig.extension.image.class%
+        class: Arthem\Bundle\FileBundle\Twig\Extension\ImageExtension
         arguments:
-            - @arthem_file.image_manager
+            - "@arthem_file.image_manager"
         tags:
             - { name: twig.extension, alias: arthem_image }
