--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-	"name": "arthem/file-bundle",
-	"description": "The file bundle",
-	"type": "symfony-bundle",
-	"license": "MIT",
-	"require": {
-        "php": ">=5.4.0",
-		"liip/imagine-bundle": "^1.0",
-		"stof/doctrine-extensions-bundle": "~1.1",
-		"kriswallsmith/buzz": "~0.7"
-	},
-	"autoload": {
-		"psr-4": {
-			"Arthem\\Bundle\\FileBundle\\": ""
-		}
-	}
+    "name": "arthem/file-bundle",
+    "description": "The file bundle",
+    "type": "symfony-bundle",
+    "license": "MIT",
+    "require": {
+        "php": ">=7",
+        "liip/imagine-bundle": "^1.7",
+        "stof/doctrine-extensions-bundle": "^1.2",
+        "guzzlehttp/guzzle": "^6.2",
+        "ramsey/uuid": "^3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Arthem\\Bundle\\FileBundle\\": ""
+        }
+    }
 }
-
