--- a/Resources/config/avatar.yml
+++ b/Resources/config/avatar.yml
@@ -3,5 +3,7 @@ services:
     _defaults:
         autowire: true
 
-    Arthem\Bundle\FileBundle\LetterAvatar\AvatarGenerator: ~
+    Arthem\Bundle\FileBundle\LetterAvatar\AvatarGenerator:
+        public: true
+
     Arthem\Bundle\FileBundle\LetterAvatar\LetterAvatarManager: ~
