add user_id on file

--- a/Resources/config/doctrine/model/File.orm.yml
+++ b/Resources/config/doctrine/model/File.orm.yml
@@ -26,6 +26,10 @@ Arthem\Bundle\FileBundle\Model\File:
             type: string
             length: 255
             nullable: true
+        userId:
+            type: string
+            length: 255
+            nullable: true
         mimeType:
             type: string
             length: 100
