--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": ">=7",
         "liip/imagine-bundle": "^2.0",
+        "symfony/symfony": "^3|^4",
         "stof/doctrine-extensions-bundle": "^1.2",
         "guzzlehttp/guzzle": "^6.2",
         "ramsey/uuid": "^3.0"
