--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": ">=7",
         "liip/imagine-bundle": "^2.0",
-        "symfony/symfony": "^3|^4",
+        "symfony/framework-bundle": "^3.0|^4.0",
         "stof/doctrine-extensions-bundle": "^1.2",
         "guzzlehttp/guzzle": "^6.2",
         "ramsey/uuid": "^3.0"
