--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "stof/doctrine-extensions-bundle": "^1.2",
         "guzzlehttp/guzzle": "^6.2",
         "ramsey/uuid": "^3.0",
-        "cocur/slugify": "^4.0"
+        "cocur/slugify": "^4.0",
+        "doctrine/persistence": "^1.3.3|^2.0"
     },
     "require-dev": {
         "doctrine/orm": "^2.6",
