--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "require": {
         "php": ">=7.4",
         "liip/imagine-bundle": "^2.0",
-        "symfony/framework-bundle": "^4.2",
+        "symfony/framework-bundle": "^4.2 | ^5.3",
         "stof/doctrine-extensions-bundle": "^1.2",
         "guzzlehttp/guzzle": "^6.2",
         "ramsey/uuid": "^3.0",
         "cocur/slugify": "^4.0",
-        "doctrine/persistence": "^1.3.3|^2.0"
+        "doctrine/persistence": "^1.3.3|^2.0",
+        "symfony/property-access": "^4.2 | ^5.3"
     },
     "require-dev": {
         "doctrine/orm": "^2.6",
